# Least_Square_Fitting_Line

./: CMakeLists.txt  README.md
include/: fit_straight_line.h  ls_test.h  utility.h
src/: fit_straight_line.cpp  ls_test.cpp
